--- a/Assignment/A-1/index.html
+++ b/Assignment/A-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2D Crowd Simulation with Obstacle Connections</title>
-    <link rel="stylesheet" href="deepseek_css_20250830_7c67c4.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
             <h1>2D Crowd Simulation with Obstacle Connections</h1>
             <p class="subtitle">Obstacle vertices connect only to the closest visible inner points.</p>
         </header>
- 
+
         <div class="content">
             <div class="canvas-container">
                 <h2>Simulation Canvas</h2>
@@ -38,7 +38,8 @@
                     <h3>Obstacle Manipulation</h3>
                     <div class="btn-group">
                         <button id="rotate-obstacle">Rotate Obstacle</button>
-                        <button id="scale-obstacle">Scale Obstacle</button>
+                        <button id="scale-obstacle-up">Scale up Obstacle</button>
+                        <button id="scale-obstacle-in">Scale in Obstacle</button>
                     </div>
                 </div>
 
@@ -89,6 +90,6 @@
         </div>
     </div>
 
-    <script src="deepseek_js_20250830_40b3f6.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
